--- a/app/templates/reports/order_details_list.html
+++ b/app/templates/reports/order_details_list.html
@@ -369,41 +369,50 @@
                                 <div class="card bg-light">
                                     <div class="card-body">
                                         <h5 class="card-title">集計情報</h5>
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                <div class="text-center">
-                                                    <h4 class="text-primary">{{ pagination.total }}</h4>
-                                                    <small class="text-muted">総報告書数</small>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <div class="text-center">
-                                                    <h4 class="text-warning">
-                                                        {% set total_work_details = order_details|sum(attribute='work_detail_count') %}
-                                                        {{ total_work_details }}
-                                                    </h4>
-                                                    <small class="text-muted">総作業項目数</small>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <div class="text-center">
-                                                    <h4 class="text-info">
-                                                        {% set unique_properties = order_details|map(attribute='property.id')|list|unique|list|length %}
-                                                        {{ unique_properties }}
-                                                    </h4>
-                                                    <small class="text-muted">対象物件数</small>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <div class="text-center">
-                                                    <h4 class="text-danger">
-                                                        {% set total_amount = order_details|sum(attribute='total_amount') %}
-                                                        ¥{{ "{:,}".format(total_amount) if total_amount else "0" }}
-                                                    </h4>
-                                                    <small class="text-muted">総金額</small>
-                                                </div>
-                                            </div>
-                                        </div>
+                                                                <div class="row">
+                            <div class="col-md-2">
+                                <div class="text-center">
+                                    <h4 class="text-primary">{{ pagination.total }}</h4>
+                                    <small class="text-muted">総報告書数</small>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="text-center">
+                                    <h4 class="text-success">
+                                        {% set total_ac_count = order_details|sum(attribute='ac_count') %}
+                                        {{ total_ac_count }}
+                                    </h4>
+                                    <small class="text-muted">総エアコン台数</small>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="text-center">
+                                    <h4 class="text-warning">
+                                        {% set total_work_details = order_details|sum(attribute='work_detail_count') %}
+                                        {{ total_work_details }}
+                                    </h4>
+                                    <small class="text-muted">総作業項目数</small>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="text-center">
+                                    <h4 class="text-info">
+                                        {% set unique_properties = order_details|map(attribute='property.id')|list|unique|list|length %}
+                                        {{ unique_properties }}
+                                    </h4>
+                                    <small class="text-muted">対象物件数</small>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="text-center">
+                                    <h4 class="text-danger">
+                                        {% set total_amount = order_details|sum(attribute='total_amount') %}
+                                        ¥{{ "{:,}".format(total_amount) if total_amount else "0" }}
+                                    </h4>
+                                    <small class="text-muted">総金額</small>
+                                </div>
+                            </div>
+                        </div>
                                     </div>
                                 </div>
                             </div>
